--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "start": "node api/mcp.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1"
+  },
   "engines": {
     "node": "20.x"
   }
