📦 Enhanced package.json with professional metadata and dev workflow
✨ Package improvements:
- Added comprehensive description and metadata
- Enhanced scripts: dev, test, deploy workflows
- Added development dependencies (vercel)
- Professional keywords for discoverability
- Repository and homepage URLs
- Maintained Node 20.x for Vercel compatibility
- Optimized dependency choices (axios over OpenAI SDK for control)

Ready for professional development and deployment workflows 🚀

--- a/package.json
+++ b/package.json
@@ -1,15 +1,42 @@
 {
   "name": "dam-butler-mcp",
   "version": "1.0.0",
+  "description": "Intent-based MCP for Breville's Vault DAM system - AI-powered brand asset discovery",
+  "main": "api/mcp.js",
   "type": "module",
   "scripts": {
-    "start": "node api/mcp.js"
+    "start": "node api/mcp.js",
+    "dev": "vercel dev",
+    "test": "node test-mcp.js",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "axios": "^1.11.0",
     "dotenv": "^17.2.1"
   },
+  "devDependencies": {
+    "vercel": "^34.0.0"
+  },
   "engines": {
     "node": "20.x"
-  }
+  },
+  "keywords": [
+    "mcp",
+    "model-context-protocol", 
+    "breville",
+    "dam",
+    "digital-asset-management",
+    "chatgpt",
+    "enterprise",
+    "intent-based",
+    "ai-powered",
+    "brand-assets"
+  ],
+  "author": "Breville DAM Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vivid-brg/dam-butler-mcp.git"
+  },
+  "homepage": "https://dam-butler-mcp.vercel.app"
 }
