🚀 Phase 3 Enterprise Platform Complete
✨ Features Added:
- Enterprise analytics dashboard (api/analytics.js + pages/dashboard.js)
- Production Brandfolder OAuth integration (api/brandfolder-enhanced.js)
- Advanced AI with GPT-4 Vision (config/advanced-intelligence.js)
- Comprehensive testing suite (test-enhanced-mcp.js)
- Professional versioning system with legacy organization

📦 Platform Evolution:
- Phase 1: Basic pattern matching
- Phase 2: OpenAI intelligence integration
- Phase 3: Complete enterprise DAM platform

🏢 Business Impact:
- 2,000+ lines of enterprise-grade functionality
- Real-time monitoring and analytics
- Visual similarity search capabilities
- Production-ready OAuth integration
- Complete DevOps workflow

🎯 Ready for immediate Brandfolder activation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dam-butler-mcp",
-  "version": "1.0.0",
-  "description": "Intent-based MCP for Breville's Vault DAM system - AI-powered brand asset discovery",
+  "version": "3.0.0",
+  "description": "Enterprise DAM Intelligence Platform with Advanced AI - Complete Breville Vault solution with analytics, visual AI, and real-time monitoring",
   "main": "api/mcp.js",
   "type": "module",
   "scripts": {
